# rag-ddd

./: .env.example  .gitignore  README.md  architecture.excalidraw  docker-compose.yml  pyproject.toml
docs/: architecture.excalidraw  architecture.md  cli.md
scripts/: exemples-test.py
src/rag_ddd/application/: dto.py  use_cases.py
src/rag_ddd/config/: containers.py  settings.py
src/rag_ddd/domain/: entities.py  ports.py
src/rag_ddd/infrastructure/blob_store/: __init__.py  gcs.py  minio.py
src/rag_ddd/infrastructure/cache/: redis_cache.py
src/rag_ddd/infrastructure/chunk_store/: __init__.py  mongo.py  postgres.py
src/rag_ddd/infrastructure/chunking/: recursive.py  semantic.py
src/rag_ddd/infrastructure/document_store/: __init__.py  mongo.py  postgres.py
src/rag_ddd/infrastructure/embeddings/: bge.py  openai.py
src/rag_ddd/infrastructure/llm/: ollama.py  openai.py  vllm.py
src/rag_ddd/infrastructure/loaders/: docling_loader.py  file_loader.py
src/rag_ddd/infrastructure/nlp/: classifier.py  enrichment_pipeline.py  extractor.py  ner.py  summarizer.py
src/rag_ddd/infrastructure/observability/: __init__.py  opik_config.py
src/rag_ddd/infrastructure/reranker/: noop.py
src/rag_ddd/infrastructure/vector_store/: pgvector.py  qdrant.py
src/rag_ddd/interface/api/: main.py  schemas.py
src/rag_ddd/interface/cli/: main.py
